# stones

./: CMakeLists.txt  DoubleComparations.hpp  Point.cpp  Point.hpp  README.md  Triangulation.cpp  Triangulation.hpp  main.cpp  stones.h
